--- a/style.css
+++ b/style.css
@@ -3,13 +3,21 @@ body {
 }
 
 th{
-     background-color: rgb(188, 186, 186);
+    background-color: rgb(142, 141, 141);
     text-align: center;
     border: 1px black solid;
 }
 
 td{
-    background-color: white;
+    
     text-align: center;
     border: 1px black solid;
+}
+
+tr.cinza {
+    background-color:silver ;
+}
+
+tr.branco {
+    background-color: white;
 }
