--- a/style.css
+++ b/style.css
@@ -5,20 +5,49 @@ body {
 }
 
 h1{
+
+    width: 350px;
+    background-color: rgb(17, 17, 158);
     color: white;
     text-align: center;
+    margin: 50px auto;
+    box-shadow: 5px 5px 10px black;
+    text-shadow: 5px 5px 7px black;
+    
 }
 
 input{
     width: 55px;
     margin: 15px 0 15px 2px;
     border-radius: 3px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.43);
+}
+input.botao {
+    width: 60px;
+    margin: 15px 0 15px 2px;
+    border-radius: 3px;
+    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.43);
+    background-color: rgb(17, 17, 158);
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+.code {
+    background-color:rgb(17, 17, 158) ;
+    color: white;
+} 
+
+section {
+    background-color:white ;
 }
 
 th{
     background-color: rgb(142, 141, 141);
     text-align: center;
     border: 1px black solid;
+    border-radius: 0px 9px ;
+    box-shadow: 5px 5px 10px black;
 }
 
 td{
