--- a/style.css
+++ b/style.css
@@ -63,3 +63,10 @@ tr.cinza {
 tr.branco {
     background-color: white;
 }
+
+footer {
+    color: white;
+    text-align: center;
+    font-weight: bolder;
+    padding: 50px;
+}
