foi criado planilha de calculo pagina inicial de seleção

--- a/style.css
+++ b/style.css
@@ -4,6 +4,25 @@ body {
     background-color: rgb(4, 4, 191);
 }
 
+a{
+    padding: 3px;
+    font-size: 1.5rem;
+    width: 70px;
+    color: blue;
+    background-color: white;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px black;
+}
+    a:hover{
+    background-color: rgb(75, 75, 211);
+    color: white;
+    font-size: 1.5rem;
+    text-decoration: none;
+    
+}
+
 h1{
 
     width: 350px;
@@ -29,7 +48,7 @@ input.botao {
     box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.43);
     background-color: rgb(17, 17, 158);
     color: white;
-    font-weight: bolder;
+    font-weight: bold;
     text-decoration: none;
 }
 
@@ -67,6 +86,6 @@ tr.branco {
 footer {
     color: white;
     text-align: center;
-    font-weight: bolder;
+    font-weight: bold;
     padding: 50px;
 }
